--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2110,4 +2110,5 @@
     <string name="model_nafnet_deblurring">Выдаляе размытасць/шум і дрыгаценне фатаграфій. Агульнага прызначэння, але лепш за ўсё на фота.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Аднаўляе выявы нізкай якасці з дапамогай трансфарматара Swin2SR, аптымізаванага для дэградацыі BSRGAN. Выдатна падыходзіць для выпраўлення моцных артэфактаў сціску і паляпшэння дэталяў у 4-кратным маштабе.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-кратнае павелічэнне маштабу з дапамогай трансфарматара SwinIR, навучанага дэградацыі BSRGAN. Выкарыстоўвае GAN для больш выразных тэкстур і больш натуральных дэталяў на фотаздымках і складаных сцэнах.</string>
+    <string name="path">шлях</string>
 </resources>
