--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2109,4 +2109,5 @@
     <string name="model_nafnet_deblurring">फोटोंमधून अस्पष्टता/आवाज आणि शेक काढून टाकते. सामान्य हेतू परंतु फोटोंसाठी सर्वोत्तम.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ट्रान्सफॉर्मर वापरून कमी-गुणवत्तेच्या प्रतिमा पुनर्संचयित करते, BSRGAN डिग्रेडेशनसाठी ऑप्टिमाइझ केलेले. हेवी कॉम्प्रेशन आर्टिफॅक्ट्स निश्चित करण्यासाठी आणि 4x स्केलवर तपशील वाढविण्यासाठी उत्तम.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN डिग्रेडेशनवर प्रशिक्षित स्विनआयआर ट्रान्सफॉर्मरसह 4x अपस्केलिंग. फोटो आणि जटिल दृश्यांमध्ये तीक्ष्ण पोत आणि अधिक नैसर्गिक तपशीलांसाठी GAN वापरते.</string>
+    <string name="path">मार्ग</string>
 </resources>
