--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2109,4 +2109,5 @@
     <string name="model_nafnet_deblurring">Уклања замућење/шум и подрхтавање фотографија. Опште намене, али најбоље на фотографијама.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Враћа слике ниског квалитета помоћу Свин2СР трансформатора, оптимизованог за БСРГАН деградацију. Одлично за поправљање артефаката тешке компресије и побољшање детаља на скали од 4к.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4к повећање са СвинИР трансформатором обученим за БСРГАН деградацију. Користи ГАН за оштрије текстуре и природније детаље на фотографијама и сложеним сценама.</string>
+    <string name="path">Пут</string>
 </resources>
