--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2109,4 +2109,5 @@
     <string name="model_nafnet_deblurring">Tar bort oskärpa/brus och skakningar från foton. Allmänt men bäst på bilder.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Återställer bilder av låg kvalitet med Swin2SR-transformator, optimerad för BSRGAN-nedbrytning. Perfekt för att fixa tunga kompressionsartefakter och förbättra detaljer i 4x skala.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4x uppskalning med SwinIR-transformator utbildad på BSRGAN-nedbrytning. Använder GAN för skarpare texturer och mer naturliga detaljer i foton och komplexa scener.</string>
+    <string name="path">Väg</string>
 </resources>
