--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -2108,4 +2108,5 @@
     <string name="model_nafnet_deblurring">Supprime le flou/bruit et les secousses des photos. Usage général mais meilleur sur les photos.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaure les images de faible qualité à l\'aide du transformateur Swin2SR, optimisé pour la dégradation BSRGAN. Idéal pour corriger les artefacts de compression importants et améliorer les détails à une échelle 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Mise à l\'échelle 4x avec le transformateur SwinIR formé à la dégradation BSRGAN. Utilise GAN pour des textures plus nettes et des détails plus naturels dans les photos et les scènes complexes.</string>
+    <string name="path">Chemin</string>
 </resources>
