--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2108,4 +2108,5 @@
     <string name="model_nafnet_deblurring">Rimuove sfocature/rumore e vibrazioni dalle foto. Scopo generale ma migliore per le foto.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Ripristina immagini di bassa qualità utilizzando il trasformatore Swin2SR, ottimizzato per il degrado BSRGAN. Ottimo per correggere artefatti da compressione pesante e migliorare i dettagli su scala 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Upscaling 4x con trasformatore SwinIR addestrato sulla degradazione BSRGAN. Utilizza GAN per texture più nitide e dettagli più naturali in foto e scene complesse.</string>
+    <string name="path">Sentiero</string>
 </resources>
