--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2110,4 +2110,5 @@
     <string name="model_nafnet_deblurring">Usuwa rozmycie/szumy i drgania ze zdjęć. Ogólnego przeznaczenia, ale najlepiej na zdjęciach.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Przywraca obrazy o niskiej jakości przy użyciu transformatora Swin2SR, zoptymalizowanego pod kątem degradacji BSRGAN. Doskonały do ​​naprawiania artefaktów spowodowanych dużą kompresją i uwydatniania szczegółów w skali 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Skalowanie 4x za pomocą transformatora SwinIR trenowanego pod kątem degradacji BSRGAN. Wykorzystuje GAN, aby uzyskać ostrzejsze tekstury i bardziej naturalne szczegóły na zdjęciach i złożonych scenach.</string>
+    <string name="path">Ścieżka</string>
 </resources>
