--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2109,4 +2109,5 @@
     <string name="model_nafnet_deblurring">Îndepărtează neclaritatea/zgomotul și tremurăturile din fotografii. Scop general, dar cel mai bine pentru fotografii.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Restaurează imagini de calitate scăzută folosind transformatorul Swin2SR, optimizat pentru degradarea BSRGAN. Excelent pentru repararea artefactelor de compresie grele și îmbunătățirea detaliilor la scară de 4x.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">Upscaling de 4x cu transformator SwinIR instruit pe degradarea BSRGAN. Utilizează GAN pentru texturi mai clare și detalii mai naturale în fotografii și scene complexe.</string>
+    <string name="path">Cale</string>
 </resources>
