--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2108,4 +2108,5 @@
     <string name="model_nafnet_deblurring">ఫోటోల నుండి బ్లర్/నాయిస్ మరియు షేక్‌లను తొలగిస్తుంది. సాధారణ ప్రయోజనం కానీ ఫోటోలలో ఉత్తమమైనది.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ట్రాన్స్‌ఫార్మర్‌ని ఉపయోగించి తక్కువ-నాణ్యత చిత్రాలను పునరుద్ధరిస్తుంది, BSRGAN అధోకరణం కోసం ఆప్టిమైజ్ చేయబడింది. భారీ కుదింపు కళాఖండాలను ఫిక్సింగ్ చేయడానికి మరియు 4x స్కేల్‌లో వివరాలను మెరుగుపరచడానికి గొప్పది.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN క్షీణతపై శిక్షణ పొందిన SwinIR ట్రాన్స్‌ఫార్మర్‌తో 4x అప్‌స్కేలింగ్. ఫోటోలు మరియు సంక్లిష్ట దృశ్యాలలో పదునైన అల్లికలు మరియు మరింత సహజమైన వివరాల కోసం GANని ఉపయోగిస్తుంది.</string>
+    <string name="path">మార్గం</string>
 </resources>
