--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -2108,4 +2108,5 @@
     <string name="model_nafnet_deblurring">سۈرەتتىكى تۇتۇق / شاۋقۇننى ۋە تەۋرىنىشنى يوقىتىدۇ. ئومۇمىي مەقسەت ئەمما سۈرەتتىكى ئەڭ ياخشى.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN نىڭ ناچارلىشىشىغا ئەلالاشتۇرۇلغان Swin2SR تىرانسفورموتور ئارقىلىق تۆۋەن سۈپەتلىك رەسىملەرنى ئەسلىگە كەلتۈرىدۇ. ئېغىر دەرىجىدىكى پىرىسلاش بۇيۇملىرىنى ئوڭشاش ۋە 4x ئۆلچەمدە تەپسىلاتلارنى ئاشۇرۇشقا ناھايىتى ماس كېلىدۇ.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN نىڭ ناچارلىشىشى توغرىسىدا تەربىيەلەنگەن SwinIR تىرانسفورموتور بىلەن 4x يۇقىرى كۆتۈرۈلگەن. رەسىم ۋە مۇرەككەپ كۆرۈنۈشلەردە تېخىمۇ ئۆتكۈر توقۇلمىلار ۋە تېخىمۇ تەبىئىي تەپسىلاتلار ئۈچۈن GAN نى ئىشلىتىڭ.</string>
+    <string name="path">Path</string>
 </resources>
