--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2110,4 +2110,5 @@
     <string name="model_nafnet_deblurring">Усуває розмиття/шуми та тремтіння фотографій. Загального призначення, але найкраще на фото.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Відновлює зображення низької якості за допомогою трансформатора Swin2SR, оптимізованого для деградації BSRGAN. Чудово підходить для виправлення важких артефактів стиснення та покращення деталей у 4-кратному масштабі.</string>
     <string name="model_bsrgan_swinir_m_x4_gan">4-кратне збільшення за допомогою трансформатора SwinIR, навченого на деградацію BSRGAN. Використовує GAN для більш чітких текстур і більш природних деталей на фотографіях і складних сценах.</string>
+    <string name="path">шлях</string>
 </resources>
