--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2132,4 +2132,5 @@
     <string name="path">Path</string>
     <string name="merge_pdf">Merge PDF</string>
     <string name="merge_pdf_sub">Combine multiple PDF files into one document</string>
+    <string name="files_order">Files Order</string>
 </resources>
