--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2136,4 +2136,7 @@
     <string name="pages_short">pp.</string>
     <string name="split_pdf">Split PDF</string>
     <string name="split_pdf_sub">Extract specific pages from PDF document</string>
+    <string name="rotate_pdf">Rotate PDF</string>
+    <string name="rotate_pdf_sub">Fix page orientation permanently</string>
+    <string name="pages">Pages</string>
 </resources>
