--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2147,4 +2147,5 @@
     <string name="label_format">Label Format</string>
     <string name="pdf_to_text">PDF to Text</string>
     <string name="pdf_to_text_sub">Extract plain text from your PDF documents</string>
+    <string name="watermark_pdf_sub">Overlay custom text for branding or security</string>
 </resources>
