--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2145,7 +2145,7 @@
     <string name="page_numbers">Page Numbers</string>
     <string name="page_numbers_sub">Add numbering to your documents automatically</string>
     <string name="label_format">Label Format</string>
-    <string name="pdf_to_text">PDF to Text</string>
+    <string name="pdf_to_text">PDF to Text (OCR)</string>
     <string name="pdf_to_text_sub">Extract plain text from your PDF documents</string>
     <string name="watermark_pdf_sub">Overlay custom text for branding or security</string>
     <string name="signature">Signature</string>
@@ -2157,4 +2157,12 @@
     <string name="protect_pdf_sub">Secure your documents with strong encryption</string>
     <string name="success">Success</string>
     <string name="pdf_unlocked">PDF unlocked, you can save or share it</string>
+    <string name="repair_pdf">Repair PDF</string>
+    <string name="repair_pdf_sub">Attempt to fix corrupted or unreadable documents</string>
+    <string name="grayscale">Grayscale</string>
+    <string name="grayscale_pdf_sub">Convert all document embedded images to grayscale</string>
+    <string name="compress_pdf">Compress PDF</string>
+    <string name="compress_pdf_sub">Optimize your document file size for easier sharing</string>
+    <string name="repair_info">ImageToolbox rebuilds the internal cross-reference table and regenerates the file structure from scratch. This can restore access to many files that \"cannot be opened\"</string>
+    <string name="grayscale_info">This tool converts all document images to grayscale. Best for printing and reducing file size</string>
 </resources>
